Added SavePredictions through database!

--- a/WebApplication1_2021_02_17_secondASPNET/WebApplication1_2021_02_17_secondASPNET.csproj
+++ b/WebApplication1_2021_02_17_secondASPNET/WebApplication1_2021_02_17_secondASPNET.csproj
@@ -15,5 +15,10 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  
+  <ItemGroup>
+    <ProjectReference Include="..\SimpleWebApp.Repository\SimpleWebApp.Repository.csproj" />
+  </ItemGroup>
+
 
 </Project>
